--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "4.0.3",
     "react-to-print": "^2.12.4",
     "styled-components": "^5.2.3",
+    "typewriter-effect": "^2.17.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
